--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,280 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: "Lato", "Noto Sans Japanese", "游ゴシック Medium", "游ゴシック体",
+    "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN",
+    "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック",
+    "MS PGothic", sans-serif;
+}
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
+.wrapper {
+  min-height: 95vh;
+}
+header {
+  position: relative;
+}
+header h3 {
+  width: 100px;
+}
+header a:hover {
+  text-decoration: none;
+}
+header .btn-sm {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  color: #696;
+}
+.help {
+  position: absolute;
+  top: 50px;
+  right: 8px;
+  background-color: #ded;
+  opacity: 0;
+  height: 0px;
+  color: transparent;
+  z-index: 100;
+}
+.help h5 {
+  padding-bottom: 5px;
+  width: 100px;
+}
+.help p {
+  width: 100%;
+}
+.show {
+  opacity: 0.8;
+  color: #363;
+  height: 250px;
+  width: 220px;
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 100;
+  transition: height 0.4s, color 0.2s ease 0.4s, border 0.2s ease 0.4s;
+}
+footer {
+  clear: both;
+  text-align: center;
+  background-color: #cdc;
+  height: 5vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dropdown {
+  width: 200px;
+  margin: 0 auto;
+}
+.area-select-div {
+  text-align: center;
+}
+/*-------------------- アクションエリア -------------------- */
+.action-area {
+  width: 80%;
+  margin: 50px auto;
+  text-align: center;
+}
+#file {
+  display: none;
+}
+#analyzed-img {
+  //   display: none;
+  height: 300px;
+  text-align: center;
+}
+figure {
+  padding-bottom: 30px;
+}
+.main-img {
+  margin: 20px 0px;
+  cursor: pointer;
+  animation: shake 3s ease 0s infinite normal none running;
+}
+figure figcaption {
+  color: #999;
+  font-weight: bold;
+}
+@keyframes shake {
+  0% {
+    transform: rotate(0);
+  }
+  30% {
+    transform: translateY(-5px);
+  }
+  40% {
+    transform: translateY(-5px);
+  }
+  45% {
+    transform: translateY(-5px) rotate(5deg);
+  }
+  50% {
+    transform: translateY(-5px) rotate(-5deg);
+  }
+  60% {
+    transform: translateY(-5px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(0);
+    transform: rotate(0deg);
+  }
+}
+.analyze-other-div {
+  width: 100%;
+  margin-top: 10px;
+}
+.analyze-other {
+  width: 200px;
+  margin: 0 auto;
+}
+/*-------------------- 結果表示エリア -------------------- */
+.result-area {
+  text-align: center;
+  padding: 0px 30px;
+}
+.review {
+  color: #fc3;
+}
+/*-------------------- サブエリア -------------------- */
+.sub-area h5 {
+  padding: 20px 0;
+  border-top: dotted #ccc;
+}
+.sub-area {
+  text-align: center;
+}
+.sub-area .radio-box {
+  padding: 20px 0px;
+}
+.sub-area button {
+  width: 150px;
+  margin-bottom: 20px;
+}
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+/*-------------------- グラフエリア -------------------- */
+.graph {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+/* pc  */
+@media screen and (min-width: 961px) {
+  label {
+    position: relative;
+    display: inline-block;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 10px;
+    line-height: 36px;
+    cursor: pointer;
+  }
+  label::before {
+    content: " ";
+    position: absolute;
+    top: 6px;
+    left: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #693;
+    border-radius: 4px;
+    z-index: -1;
+  }
+  input[type="radio"] + label::before {
+    border-radius: 5px;
+    border-bottom-right-radius: 50px 25px;
+    border-top-left-radius: 50px 25px;
+    background-color: #693;
+  }
+  input[type="radio"]:checked + label {
+    padding-left: 10px;
+    color: #fff;
+  }
+  input[type="radio"]:checked + label::before {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #39c;
+    border: #693;
+    border-radius: 5px;
+  }
+  label,
+  label::before {
+    -webkit-transition: 0.25s all ease;
+    -o-transition: 0.25s all ease;
+    transition: 200ms all ease-in-out;
+  }
+  .graph {
+    width: 50%;
+  }
+}
+/* tablet  */
+@media only screen and (min-width: 641px) and (max-width: 960px) {
+  label {
+    width: 44%;
+    border-right: 2px solid #999;
+    border-bottom: 1px solid #999;
+    border-radius: 2px;
+    padding: 10px;
+    margin: 4px 10px;
+
+    float: left;
+  }
+  label:hover {
+    background-color: #eee;
+    transform: translate(-1px, -2px) scale(1.05);
+  }
+  input[type="radio"]:checked + label {
+    background-color: #39c;
+    color: #fff;
+    border-right: 2px solid #39c;
+    border-bottom: 1px solid #39c;
+    opacity: 0.9;
+    transform: translate(-1px, -2px) scale(1.05);
+  }
+  label {
+    /* -webkit-transition: .25s all ease;
+        -o-transition: .25s all ease; */
+    transition: 200ms all ease-in-out;
+  }
+  .graph {
+    width: 80%;
+  }
+}
+/* smartPhone */
+@media screen and (max-width: 640px) {
+  label {
+    width: 100%;
+    border: 2px solid #999;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px;
+    float: left;
+  }
+  label:hover {
+    background-color: #eee;
+    border: 2px solid #6fc;
+  }
+  input[type="radio"]:checked + label {
+    background-color: #39c;
+    color: #fff;
+    border: 2px solid #39c;
+    opacity: 0.9;
+  }
+  label {
+    /* -webkit-transition: .25s all ease;
+        -o-transition: .25s all ease; */
+    transition: 200ms all ease-in-out;
+  }
+  .graph {
+    width: 100%;
+  }
+}
