--- a/src/app/contents/contents.component.html
+++ b/src/app/contents/contents.component.html
@@ -39,6 +39,13 @@
     </figure>
   </div>
 
+  <!-- ローディングエリア -->
+  <div class="result-area" *ngIf="isLoading">
+    <h2 class="result">
+      分析中...
+    </h2>
+  </div>
+
   <!-- 結果を表示するエリアブロック -->
   <div class="result-area" *ngIf="isFinished">
     <div *ngIf="detailedTags.length > 0; else elseBlock">
@@ -101,6 +108,6 @@
     </button>
   </div>
   <div class="graph" hidden>
-    <canvas id="stage"></canvas>
+    <canvas id="stage" ></canvas>
   </div>
 </div>
